# mcpClient

./: README.md  app.py  requirements.txt  test_lambda.py
gdrive_mcpserver/: LICENSE  README.md  commands  pyproject.toml  requirements.txt
gdrive_mcpserver/src/gdrive_mcp_server/: __init__.py  auth_setup.py  server.py
mcpclient/: Dockerfile  app.py  mcpServers.json  requirements.txt  test_lambda.py
